--- a/2.2.1. spring_hibernate/.gitignore
+++ b/2.2.1. spring_hibernate/.gitignore
@@ -1,3 +1,5 @@
+# Maven
+../.idea
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -8,3 +10,28 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
+
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs
+hs_err_pid*
+replay_pid*
